# demo-python-memory-reference-accounting

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit-checks.yaml  run-memory-tests.yaml
src/pymaccounter/: Dockerfile  __init__.py  pipeline.py  runner.py
src/pymaccounter/tests/: test_baseline.py  test_gc.debug_leak.py  test_multiply_gc.callbacks.py  test_multiply_gc.collect.py  test_multiply_gc.debug_leak copy.py  test_multiply_gc.debug_leak.py
src/pymaccounting/: __init__.py  pipeline.py  runner.py
src/pymaccounting/tests/baseline/: test_baseline.py
